--- a/rust_game_sdl2/Cargo.toml
+++ b/rust_game_sdl2/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "example"
+name = "rust_game_sdl2"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,13 +7,8 @@ edition = "2021"
 
 [dependencies]
 rust_game = { path = "../rust_game" }
-rust_game_sdl2 = { path = "../rust_game_sdl2" }
 
 # https://docs.rs/sdl2/latest/sdl2/
 # https://docs.rs/crate/sdl2/0.22.0/source/README.md
 # https://github.com/Rust-SDL2/rust-sdl2
 sdl2 = "0.35.1"
-
-[[bin]]
-name = "sdl2_example"
-path = "src/sdl2_example/main.rs"
