--- a/rust_game_sdl2/Cargo.toml
+++ b/rust_game_sdl2/Cargo.toml
@@ -13,5 +13,9 @@ rust_game = { path = "../rust_game" }
 # https://github.com/Rust-SDL2/rust-sdl2
 sdl2 = "0.35.1"
 
+# https://opencv.org/releases/
+# https://github.com/opencv/opencv
+opencv = "0.62.0"
+
 num-traits = "0.2.x"
 num-derive = "0.3.x"
