--- a/rust_game_sdl2/Cargo.toml
+++ b/rust_game_sdl2/Cargo.toml
@@ -17,5 +17,8 @@ sdl2 = "0.35.1"
 # https://github.com/opencv/opencv
 opencv = "0.62.0"
 
+# https://docs.rs/image/latest/image/
+image = "0.24.0"
+
 num-traits = "0.2.x"
 num-derive = "0.3.x"
