draw shapes opencv

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -14,10 +14,15 @@ rust_game_sdl2 = { path = "../rust_game_sdl2" }
 # https://github.com/Rust-SDL2/rust-sdl2
 sdl2 = "0.35.1"
 
-[[bin]]
-name = "sdl2_example"
-path = "src/sdl2_example/main.rs"
 
 [[bin]]
 name = "creature_animation"
 path = "src/creature_animation/main.rs"
+
+[[bin]]
+name = "draw_shapes"
+path = "src/draw_shapes/main.rs"
+
+[[bin]]
+name = "sdl2_example"
+path = "src/sdl2_example/main.rs"
